# ParallelComputingCourse

lab_simd_openmp/: .gitignore  CMakeLists.txt  main.cpp  timing.cpp  timing.hpp
